--- a/pf-react/nginx.conf
+++ b/pf-react/nginx.conf
@@ -5,6 +5,13 @@ server {
     listen [::]:80;
     server_name vladplk.mysmarttech.fr;
     
+    # Health check endpoint (for Docker tests without SSL)
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+
     # Allow Let's Encrypt challenge
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/html;
@@ -18,17 +25,16 @@ server {
 
 # HTTPS server
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
     server_name vladplk.mysmarttech.fr;
+    # Use certificates mounted from the host via docker-compose volumes
+    ssl_certificate /etc/letsencrypt/live/vladplk.mysmarttech.fr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vladplk.mysmarttech.fr/privkey.pem;
     
     # Root directory for static files
     root /usr/share/nginx/html;
     index index.html;
-    
-    # SSL Configuration
-    ssl_certificate /etc/letsencrypt/live/vladplk.mysmarttech.fr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/vladplk.mysmarttech.fr/privkey.pem;
     
     # Modern SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
