--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,48 @@
 node_modules/
+.env
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.swp
+*.swo
+*.bak
+*.tmp
+dist/
+build/
+coverage/
+*.iml
+*.sublime-workspace
+*.sublime-project
+*.sqlite
+*.sqlite3
+*.pid
+*.seed
+*.pid.lock
+*.local
+*.cache
+*.pyc
+*.pyo
+*.pyd
+*.egg-info/
+*.egg
+*.manifest
+*.spec
+*.rej
+*.orig
+*.patch
+*.crt
+*.key
+*.pem
+*.p12
+*.pfx
+*.cer
+*.csr
+*.der
+*.jks
+*.keystore
+*.lock
