--- a/pf-react/nginx.conf
+++ b/pf-react/nginx.conf
@@ -1,63 +1,13 @@
 
-# HTTP to HTTPS redirect
+# Simple HTTP server - SSL handled by main proxy
 server {
     listen 80;
     listen [::]:80;
     server_name vladplk.mysmarttech.fr;
     
-    # Health check endpoint (for Docker tests without SSL)
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
-    }
-
-    # Allow Let's Encrypt challenge
-    location /.well-known/acme-challenge/ {
-        root /usr/share/nginx/html;
-    }
-    
-    # Redirect all other traffic to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-# HTTPS server
-server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    server_name vladplk.mysmarttech.fr;
-    # Use certificates mounted from the host via docker-compose volumes
-    ssl_certificate /etc/letsencrypt/live/vladplk.mysmarttech.fr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/vladplk.mysmarttech.fr/privkey.pem;
-    
     # Root directory for static files
     root /usr/share/nginx/html;
     index index.html;
-    
-    # Modern SSL configuration
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
-    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
-    
-    # SSL session settings
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:SSL:50m;
-    ssl_session_tickets off;
-    
-    # OCSP stapling
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    ssl_trusted_certificate /etc/letsencrypt/live/vladplk.mysmarttech.fr/chain.pem;
-    
-    # Security headers
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
     
     # Gzip compression
     gzip on;
